Fixed checkbox alignment issue with editorial workflow feature.

--- a/web/sites/all/themes/gpii_sai/scss/gpii_sai.scss
+++ b/web/sites/all/themes/gpii_sai/scss/gpii_sai.scss
@@ -984,7 +984,7 @@ tree-control.tree-classic li .tree-selected {
   .view-node-flag-done.view-display-id-block_1 {
     .views-field {
       padding-left: 2rem;
-      margin-bottom: 0.3rem;
+      margin-bottom: 0.162rem;
     }
   }
   .flag-photo-complete, .flag-description-complete, .flag-alt-title-complete, .flag-mfgr-complete, .flag-taxonomy-complete, .flag-wheretobuy-complete {
